[gd_scene load_steps=3 format=2]

[ext_resource path="res://tiles/Tile.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30.486, 30.8215 )

[node name="Tile" type="KinematicBody2D" index="0"]

input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="TFace" type="Sprite" parent="." index="1"]

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]


